--- a/nonata/src/main/resources/application.yml
+++ b/nonata/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    include: db,jwt
+    include: db
 
   jpa:
     hibernate:
@@ -10,4 +10,3 @@ spring:
     show-sql: true
     properties:
       hibernate.format_sql: true
-    open-in-view: true
